--- a/stable/metrics/values.yaml
+++ b/stable/metrics/values.yaml
@@ -145,27 +145,27 @@ prometheus:
     enabled: false
   configmapReload:
     image:
-      repository: staging.registry.howdoi.website/splatform/stratos-metrics-configmap-reload
+      repository: registry.suse.com/cap/stratos-metrics-configmap-reload
       tag: 1.1.1-2fa6cdf-cap
   initChownData:
     image:
-      repository: staging.registry.howdoi.website/splatform/stratos-metrics-init-chown-data
+      repository: registry.suse.com/cap/stratos-metrics-init-chown-data
       tag: 1.1.1-2fa6cdf-cap
   kubeStateMetrics:
     enabled: false
     image:
-      repository: staging.registry.howdoi.website/splatform/stratos-metrics-kube-state-metrics
+      repository: registry.suse.com/cap/stratos-metrics-kube-state-metrics
       tag: 1.1.1-2fa6cdf-cap
   nodeExporter:    
     enabled: false
     image:
-      repository: staging.registry.howdoi.website/splatform/stratos-metrics-node-exporter
+      repository: registry.suse.com/cap/stratos-metrics-node-exporter
       tag: 1.1.1-2fa6cdf-cap
   server:
     name: prometheus
     configMapOverrideName: stratos-metrics-config
     image:
-      repository: staging.registry.howdoi.website/splatform/stratos-metrics-prometheus
+      repository: registry.suse.com/cap/stratos-metrics-prometheus
       tag: 1.1.1-2fa6cdf-cap
     replicaCount: 1
     service:
