--- a/stable/console/templates/ingress.yaml
+++ b/stable/console/templates/ingress.yaml
@@ -26,7 +26,7 @@ data:
 
 ---
 # Ingress for the Console UI service
-{{- if semverCompare ">=1.16" (printf "%s.%s" .Capabilities.KubeVersion.Major .Capabilities.KubeVersion.Minor) }}
+{{- if semverCompare ">=1.16" (printf "%s.%s" .Capabilities.KubeVersion.Major (trimSuffix "+" .Capabilities.KubeVersion.Minor) ) }}
 apiVersion: "networking.k8s.io/v1beta1"
 {{- else }}
 apiVersion: "extensions/v1beta1"
