Make ingress work with k8s 1.16
There is a series of modifications required to make the ingress
helm chart to work with 1.16. A summary:

- Replace 'extensions/v1beta1' with 'apps/v1" for the deployment
  daemonset and the default backend. Also update the PSP as well.

- Replace the `.Chart.Name` with `template "nginx-ingress.chart"`
  to all the files under ./templates/*.yaml and also define this
  at `_helpers.tpl`.

- Introduce {app,release} matchLabels to be compatible with the
  upstream helm chart.

--- a/stable/nginx-ingress/templates/controller-daemonset.yaml
+++ b/stable/nginx-ingress/templates/controller-daemonset.yaml
@@ -1,10 +1,10 @@
 {{- if eq .Values.controller.kind "DaemonSet" }}
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   labels:
     app: {{ template "nginx-ingress.name" . }}
-    chart: {{ .Chart.Name }}-{{ .Chart.Version }}
+    chart: {{ template "nginx-ingress.chart" . }}
     component: "{{ .Values.controller.name }}"
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
