--- a/stable/nginx-ingress/Chart.yaml
+++ b/stable/nginx-ingress/Chart.yaml
@@ -1,3 +1,4 @@
+apiVersion: v1
 name: nginx-ingress
 version: 0.28.4
 appVersion: 0.15.0
@@ -17,3 +18,4 @@ maintainers:
   - name: chancez
     email: chance.zibolski@coreos.com
 engine: gotpl
+kubeVersion: ">=1.10.0-0"
