--- a/stable/kubecf/Chart.yaml
+++ b/stable/kubecf/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
-appVersion: 2.1.1-rc3
+appVersion: 2.1.1
 description: A Helm chart for KubeCF
 icon: https://raw.githubusercontent.com/cloudfoundry-incubator/kubecf/master/icon/kubecf.png
 name: kubecf
-version: 2.7.13-rc3
+version: 2.7.13
