--- a/stable/metrics/templates/cf-exporter.yaml
+++ b/stable/metrics/templates/cf-exporter.yaml
@@ -31,6 +31,11 @@ spec:
         app.kubernetes.io/component: "stratos-metrics-cf-exporter"
         helm.sh/chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
     spec:
+      {{- if and (eq (printf "%s" .Values.kube.auth) "rbac") (.Capabilities.APIVersions.Has "rbac.authorization.k8s.io/v1") }}
+      serviceAccountName: "metrics-basic"
+      {{- end }}
+      securityContext:
+        runAsNonRoot: false    
       containers:
       - image: {{.Values.dockerRepository}}/{{.Values.dockerOrganization}}/{{.Values.cfExporter.image}}:1.3.0-4c982f3-cap
         imagePullPolicy: {{ .Values.imagePullPolicy }}
